--- a/app/src/main/is-Engine-linux.cbp
+++ b/app/src/main/is-Engine-linux.cbp
@@ -8,7 +8,7 @@
 		<Build>
 			<Target title="Debug">
 				<Option output="bin-codeblocks/Debug/is-Engine-linux" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/Debug/" />
+				<Option object_output="bin-codeblocks/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -25,7 +25,7 @@
 			</Target>
 			<Target title="Release">
 				<Option output="bin-codeblocks/Release/is-Engine-linux" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/Release/" />
+				<Option object_output="bin-codeblocks/Release/" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
